style.scss
*,
*::before,
*::after {
	box-sizing: border-box;
}

:root {
	--color-text: #333;
	--color-one: hsl(315, 50%, 33%);
	--color-two: hsl(260, 50%, 50%);
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-text: #fff;
		--color-one: hsl(315, 50%, 67%);
		--color-two: hsl(260, 50%, 67%);
	}

	.logo {
		filter: invert(1);
	}
}

body {
	margin: 1rem;
	font-family: "Roboto", sans-serif;
	font-size: small;
	line-height: 1.25;
	color: var(--color-text);
}

header {
	display: flex;
	gap: 1ch;
}

.top {
	width: 100%;

	hgroup {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
	}

	h1 {
		margin: 0;
	}
}

.logo {
	width: 4rem;
}

address,
nav {
	font-style: normal;
	a {
		white-space: nowrap;
	}
}

header,
section:not(:last-child) {
	padding-bottom: 1ch;
	border-bottom: 1px solid;
	border-image: linear-gradient(to right, transparent, var(--color-one), var(--color-two), transparent) 1;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: normal;
}

h1,
h2,
h3 {
	margin: 1ch 0 0 0;
}

h4,
h5,
h6 {
	margin: 0;
}

h1 {
	color: var(--color-one);
}

h2 {
	color: var(--color-two);
}

a {
	color: var(--color-text);
	text-decoration: none;
}

a:hover {
	color: var(--color-text);
	text-decoration: underline;
}

i {
	font-size: smaller;
}

ul {
	margin: 0;
	list-style: square;
}

.time {
	float: right;
}

@media screen {
	body {
		font-size: large;
	}
}

@media screen and (max-width: 780px) {
	html {
		margin: 2rem;
	}

	.logo {
		display: none;
	}

	address a,
	nav a {
		line-height: 2;
	}
}

@media screen and (min-width: 780px) {
	html {
		margin: 2rem auto;
		width: 8.5in; // width of page
	}
}

